--- a/.github/workflows/checkin.yml
+++ b/.github/workflows/checkin.yml
@@ -7,9 +7,9 @@ on:
     types:
       - completed
 
-  # UTC时间，对应Beijing时间 8：30
+  # UTC时间，对应Beijing时间 6:13/18:13
   schedule:
-    - cron: "30 0,12 * * *"
+    - cron: "13 10,22 * * *"
 
 jobs:
   run:
